# orchestra

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: linux.yml
docs/: linux-wsl.md
ios/Orchestra/: APIClient.swift  AppModel.swift  Components.swift  Info.plist  Models.swift  OrchestraApp.swift  ProjectsView.swift  RunDetailView.swift  StatsView.swift  UpdatesView.swift  UsageView.swift  WorkersView.swift
ios/Orchestra.xcodeproj/: project.pbxproj
ios/Orchestra/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/OrchestraTests/: OrchestraTests.swift
orchestra_cli/: __main__.py  brief.py  cancel.py  checkpoint.py  child_runs.py  cli.py  config.py  db.py  docs.py  ensemble.py  host.py  names.py  paths.py  projects.py  runners.py  supervise.py  tailscale.py  ui.html  ui.py  worktree.py
orchestra_cli/templates/: ORCHESTRA.md
orchestra_cli/usage/: __init__.py  credentials.py  inference.py  models.py  providers.py  service.py  warning.py
orchestra_cli/usage/web/: runway.html
tests/: conftest.py  test_cancel.py  test_checkpoint.py  test_child_runs.py  test_db_migration.py  test_dispatch_quota.py  test_ensemble.py  test_feed.py  test_init_playbook.py  test_linux_support.py  test_names.py  test_projects.py  test_queue_recall.py  test_resume.py  test_runners.py  test_send.py  test_slug_uniqueness.py  test_supervise_lifecycle.py  test_tailscale_ui.py  test_ui_details.py  test_ui_routes.py  test_usage_api.py  test_usage_cmdline.py  test_usage_inference.py  test_usage_providers.py  test_usage_serialization.py  test_usage_service.py
(+2 files in other folders)
